fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -25,8 +25,8 @@ body {
     font-size: 16px;
     color: #666666;
     font-weight: 400;
-    margin-top: 80px;
-    margin-bottom: 80px;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 
@@ -93,12 +93,12 @@ body {
 /* Header */
 
 .navbar {
-    box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.08);
+    box-shadow: 0 5px 4px 0 rgba(0, 0, 0, 0.08);
     border-radius: 10px;
     padding: 20px 15px;
     background: #fff;
     overflow: hidden;
-    top: 30px;
+    top: 80px;
 }
 
 .navbar-nav .nav-item .nav-link {
@@ -121,7 +121,7 @@ body {
 /* hero */
 
 .hero {
-    padding: 150px 0px;
+    padding: 250px 0px;
 }
 
 .hero .hero-left {
@@ -284,4 +284,9 @@ body {
 
 .social .social-media:hover a {
     color: #fff;
+}
+
+#topcontrol img {
+    margin-right: 100px;
+    margin-bottom: 100px;
 }
